kubernetes-hw/14/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: nginx
    version: main
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
